--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/sweater
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
+
+spring.mustache.expose-request-attributes=true
